--- a/src/main/webapp/views/anonymous/Impressum.xhtml
+++ b/src/main/webapp/views/anonymous/Impressum.xhtml
@@ -2,19 +2,25 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="jakarta.faces.html"
-      xmlns:f="jakarta.faces.core">
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
 <h:head>
     <title>Impressum</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"/>
-
 </h:head>
 
 <h:body>
-    <h:outputText id="imprint-link" value="#{impressumBacking.impressumContent}"/>
+    <ui:include src="header.xhtml" />
+    <div class="container">
 
-
+        <div class="card mt-5">
+            <div class="card-body">
+                <h:outputText id="imprint-link" value="#{impressumBacking.impressumContent}" styleClass="card-text" style="white-space: pre-line"/>
+            </div>
+        </div>
+    </div>
 </h:body>
 
 </html>
