--- a/src/main/webapp/views/anonymous/header.xhtml
+++ b/src/main/webapp/views/anonymous/header.xhtml
@@ -23,8 +23,6 @@
         </script>
 
 
-
-
     </h:head>
     <h:body>
 
@@ -41,9 +39,8 @@
                     <ul class="navbar-nav ml-auto">
                         <!--  für anonymous User -->
                         <h:panelGroup rendered="#{sessionInfo.anonymous}">
-                            <li class="nav-item">
-                                <h:commandLink id="imprint-otxt" value="Impressum" action="impressum" styleClass="nav-link"/>
-                            </li>
+                            <h:link id="homepageLog-lin" outcome="/views/anonymous/login.xhtml" value="Hauptseite"
+                                    styleClass="nav-link"/>
                             <li class="nav-item">
                                 <h:link id="help-anonymous-link" outcome="/views/help/help" value="Hilfeseite" styleClass="nav-link"/>
                             </li>
@@ -57,8 +54,11 @@
                             </li>
 
                             <li class="nav-item">
-                                <h:link id="profil-link" outcome="/views/authenticated/profile.xhtml" value="Profilseite"
-                                        styleClass="nav-link"/>
+<!--                                <h:link id="profil-link" outcome="/views/authenticated/profile.xhtml" value="Profilseite"-->
+<!--                                        styleClass="nav-link"/>-->
+                                <h:outputLink  id="profil-link" value="../authenticated/profile.xhtml?id=#{sessionInfo.user.id}">
+                                    <h:outputText value="Profilseite" styleClass="nav-link"/>
+                                </h:outputLink>
                             </li>
 
                         </h:panelGroup>
