--- a/src/main/webapp/views/anonymous/login.xhtml
+++ b/src/main/webapp/views/anonymous/login.xhtml
@@ -7,11 +7,17 @@
 <h:head>
     <title>Login</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"/>
+
 </h:head>
 
 <h:body>
-    <ui:include src="header.xhtml" />
+    <ui:composition template="template.xhtml">
+
+    <ui:define name="mainContent">
     <div class="container">
+        <div class="back jumbotron text-center" > <!-- Bootstrap Jumbotron für Highlight-Effekt -->
+            <h2 class="display-5">Willkommen auf DocTheisesTracker!</h2>
+        </div>
         <div class="row justify-content-center mt-5">
             <div class="col-md-6">
                 <h:form id="login-form">
@@ -50,6 +56,8 @@
             </div>
         </div>
     </div>
+    </ui:define>
+    </ui:composition>
 </h:body>
 
 </html>
