--- a/src/main/webapp/views/authenticated/profile.xhtml
+++ b/src/main/webapp/views/authenticated/profile.xhtml
@@ -11,7 +11,8 @@
     </h:head>
 
     <h:body>
-        <ui:include src="/views/anonymous/header.xhtml" />
+        <ui:composition template="../anonymous/template.xhtml">
+        <ui:define name="mainContent">
         <div class="container">
             <h:form>
 
@@ -61,6 +62,8 @@
             </h:form>
 
         </div>
+        </ui:define>
+        </ui:composition>
     </h:body>
 </f:view>
 
