--- a/src/main/webapp/views/examineCommittee/createCirculation.xhtml
+++ b/src/main/webapp/views/examineCommittee/createCirculation.xhtml
@@ -2,123 +2,142 @@
 
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml"
-	  xmlns:h="http://xmlns.jcp.org/jsf/html" xmlns:f="http://xmlns.jcp.org/jsf/core"
-	  xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+	xmlns:h="http://xmlns.jcp.org/jsf/html"
+	xmlns:f="http://xmlns.jcp.org/jsf/core"
+	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
 <h:head>
 	<title>Create a new course</title>
 	<link href="${request.contextPath}/resources/css/style.css"
-		  rel="stylesheet" type="text/css" />
+		rel="stylesheet" type="text/css" />
 
 	<link
-			href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-			rel="stylesheet" />
+		href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+		rel="stylesheet" />
 </h:head>
 
 <h:body>
 	<ui:composition template="../anonymous/template.xhtml">
-	<ui:define name="mainContent">
+		<ui:define name="mainContent">
 
-	<div class="container">
-		<h1>Create a new circulation</h1>
-		<hr />
+			<div class="container">
+				<h1>Create a new circulation</h1>
+				<hr />
 
-		<h:form id="createCirculation" class="mt-4">
-			<div class="form-group row">
-				<label class="col-sm-2 col-form-label" for="title-itxt">Title:</label>
-				<div class="col-sm-10">
-					<h:inputText id="title-itxt"
-								 value="#{circulationCreatingBacking.circulation.title}"
-								 required="true" validator="UniqueCirculationNameValidator"
-								 class="form-control">
-					</h:inputText>
-					<h:message for="title-itxt" styleClass="message" />
-				</div>
+				<h:form id="createCirculation" class="mt-4">
+					<div class="form-group row">
+						<label class="col-sm-2 col-form-label" for="title-itxt">Title:</label>
+						<div class="col-sm-10">
+							<h:inputText id="title-itxt"
+								value="#{circulationCreatingBacking.circulation.title}"
+								required="true" validator="UniqueCirculationNameValidator"
+								class="form-control">
+							</h:inputText>
+							<h:message for="title-itxt" styleClass="message" />
+						</div>
+					</div>
+
+					<div class="form-group row">
+						<label class="col-sm-2 col-form-label"
+							for="doctoral-candidate-name-itxt">Doctoral Candidate:</label>
+						<div class="col-sm-10">
+							<h:inputText id="doctoral-candidate-name-itxt"
+								value="#{circulationCreatingBacking.circulation.doctoralCandidateName}"
+								required="true" class="form-control" />
+							<h:message for="doctoral-candidate-name-itxt"
+								styleClass="message" />
+						</div>
+					</div>
+
+					<div class="form-group row">
+						<label class="col-sm-2 col-form-label"
+							for="doctoral-supervisor-itxt">Doctoral Supervisor:</label>
+						<div class="col-sm-10">
+							<h:inputText id="doctoral-supervisor-itxt"
+								value="#{circulationCreatingBacking.circulation.doctoralSupervisor}"
+								required="true" class="form-control" />
+							<h:message for="doctoral-supervisor-itxt" styleClass="message" />
+						</div>
+					</div>
+
+					<div class="form-group row">
+						<label class="col-sm-2 col-form-label" for="description-itxt">Description:</label>
+						<div class="col-sm-10">
+							<h:inputTextarea id="description-itxt"
+								value="#{circulationCreatingBacking.circulation.description}"
+								required="true" class="form-control" />
+							<h:message for="description-itxt" styleClass="message" />
+						</div>
+					</div>
+
+					<div class="form-group row">
+						<label class="col-sm-2 col-form-label" for="start-date-itxt">Circulation
+							Start Date:</label>
+						<div class="col-sm-10">
+							<h:inputText id="start-date-itxt"
+								value="#{circulationCreatingBacking.startDate}" required="true"
+								class="form-control">
+								<f:convertDateTime type="localDate" />
+							</h:inputText>
+							<h:message for="start-date-itxt" styleClass="message" />
+						</div>
+					</div>
+
+					<div class="form-group row">
+						<label class="col-sm-2 col-form-label" for="end-date-itxt">Circulation
+							End Date:</label>
+						<div class="col-sm-10">
+							<h:inputText id="end-date-itxt"
+								value="#{circulationCreatingBacking.endDate}" required="true"
+								class="form-control">
+								<f:convertDateTime type="localDate" />
+							</h:inputText>
+							<h:message for="end-date-itxt" styleClass="message" />
+						</div>
+					</div>
+
+					<div class="form-group row">
+						<label class="col-sm-2 col-form-label" for="faculty-som">Fakultät:</label>
+						<div class="col-sm-10">
+							<h:selectOneMenu id="faculty-som"
+								value="#{circulationCreatingBacking.faculty}"
+								class="form-control" converter="facultyConverter">
+								<f:selectItems value="#{circulationCreatingBacking.facultyList}"
+									var="faculty" itemLabel="#{faculty.name}"
+									itemValue="#{faculty}" />
+							</h:selectOneMenu>
+							<h:message for="faculty-som" styleClass="message" />
+						</div>
+					</div>
+
+					<div class="form-group row">
+						<label class="col-sm-2 col-form-label" for="obligatory-bcb">Obligatory:</label>
+						<div class="col-sm-10">
+							<h:selectBooleanCheckbox id="obligatory-bcb"
+								value="#{circulationCreatingBacking.circulation.obligatory}"
+								class="form-control">
+							</h:selectBooleanCheckbox>
+							<h:message for="obligatory-bcb" styleClass="message" />
+						</div>
+					</div>
+
+					<div class="form-group row">
+						<div class="offset-sm-2 col-sm-10">
+							<h:commandButton id="create" value="Create the circulation"
+								action="#{circulationCreatingBacking.create}"
+								class="btn btn-primary" />
+							<h:message for="create" styleClass="message" />
+						</div>
+					</div>
+				</h:form>
+
+				<hr />
 			</div>
 
-			<div class="form-group row">
-				<label class="col-sm-2 col-form-label"
-					   for="doctoral-candidate-name-itxt">Doctoral Candidate:</label>
-				<div class="col-sm-10">
-					<h:inputText id="doctoral-candidate-name-itxt"
-								 value="#{circulationCreatingBacking.circulation.doctoralCandidateName}"
-								 required="true" class="form-control" />
-					<h:message for="doctoral-candidate-name-itxt" styleClass="message" />
-				</div>
-			</div>
-
-			<div class="form-group row">
-				<label class="col-sm-2 col-form-label" for="doctoral-supervisor-itxt">Doctoral
-					Supervisor:</label>
-				<div class="col-sm-10">
-					<h:inputText id="doctoral-supervisor-itxt"
-								 value="#{circulationCreatingBacking.circulation.doctoralSupervisor}"
-								 required="true" class="form-control" />
-					<h:message for="doctoral-supervisor-itxt" styleClass="message" />
-				</div>
-			</div>
-
-			<div class="form-group row">
-				<label class="col-sm-2 col-form-label" for="description-itxt">Description:</label>
-				<div class="col-sm-10">
-					<h:inputTextarea id="description-itxt"
-									 value="#{circulationCreatingBacking.circulation.description}"
-									 required="true" class="form-control" />
-					<h:message for="description-itxt" styleClass="message" />
-				</div>
-			</div>
-
-			<div class="form-group row">
-				<label class="col-sm-2 col-form-label" for="start-date-itxt">Circulation Start
-					Date:</label>
-				<div class="col-sm-10">
-					<h:inputText id="start-date-itxt"
-								 value="#{circulationCreatingBacking.startDate}" required="true"
-								 class="form-control">
-						<f:convertDateTime type="localDate" />
-					</h:inputText>
-					<h:message for="start-date-itxt" styleClass="message" />
-				</div>
-			</div>
-
-			<div class="form-group row">
-				<label class="col-sm-2 col-form-label" for="end-date-itxt">Circulation End
-					Date:</label>
-				<div class="col-sm-10">
-					<h:inputText id="end-date-itxt"
-								 value="#{circulationCreatingBacking.endDate}" required="true"
-								 class="form-control">
-						<f:convertDateTime type="localDate" />
-					</h:inputText>
-					<h:message for="end-date-itxt" styleClass="message" />
-				</div>
-			</div>
-
-			<div class="form-group row">
-				<label class="col-sm-2 col-form-label" for="obligatory-bcb">Obligatory:</label>
-				<div class="col-sm-10">
-					<h:selectBooleanCheckbox id="obligatory-bcb"
-											 value="#{circulationCreatingBacking.circulation.obligatory}" class="form-control">
-					</h:selectBooleanCheckbox>
-					<h:message for="obligatory-bcb" styleClass="message" />
-				</div>
-			</div>
-
-			<div class="form-group row">
-				<div class="offset-sm-2 col-sm-10">
-					<h:commandButton id="create" value="Create the circulation"
-									 action="#{circulationCreatingBacking.create}" class="btn btn-primary" />
-					<h:message for="create" styleClass="message" />
-				</div>
-			</div>
-		</h:form>
-
-		<hr />
-	</div>
-
-	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-	</ui:define>
+			<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+			<script
+				src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+		</ui:define>
 	</ui:composition>
 </h:body>
 
