add the Description to the dataTable

--- a/src/main/webapp/views/authenticated/circulationslist.xhtml
+++ b/src/main/webapp/views/authenticated/circulationslist.xhtml
@@ -109,7 +109,15 @@
 
                             </h:column>
 
-                            <!---  Startzeit-->
+                            <!-- Description -->
+                            <h:column>
+                                <f:facet name="header">
+                                    <h:outputText value="Description"/>
+
+                                </f:facet>
+                                <h:outputText value="#{circulation.description}"/>
+                            </h:column>
+
                             <!-- Startzeit -->
                             <h:column>
                                 <f:facet name="header">
